# order-sync

./: .env  .gitignore  README.md  orders.json  orders_more.json  orders_updates.json  pyproject.toml  requirements.txt
src/order_sync/: __init__.py  cli.py  config.py  drive.py  excel_sync.py  models.py  mongo_fetch.py  mongo_mapping.py  utils.py
src/order_sync.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
